--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <main class="main">
   <h1>Angular 18 tutorial</h1>
   <app-c01expressions></app-c01expressions>
+  <app-c02components></app-c02components>
 </main>
 
 <router-outlet />
