--- a/src/app/c01expressions/c01expressions.component.html
+++ b/src/app/c01expressions/c01expressions.component.html
@@ -1,2 +1,7 @@
 <h2>01 Expressions</h2>
-<p>My first expression: {{ 5 + 5 }}</p>
+
+<div ng-app="">
+  <p>My first expression: {{ 5 + 5 }}</p>
+  <p>Total in dollar: {{ quantity * cost }}</p>
+</div>
+
