--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -1,1 +1,5 @@
-<p>c03input-properties works!</p>
+<h2>03 Input Properties (React "props")</h2>
+
+<div>
+  <p>The value I'm setting to "value" as "props" is {{value}}</p>
+</div>
