c03 with transformed inputs

--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -1,5 +1,10 @@
 <h2>03 Input Properties (React "props")</h2>
 
 <div>
+
   <p>The value I'm setting to "value" as "props" is {{value}}</p>
+  <h3>Required Inputs</h3>
+  <p>This is a required input: {{requiredInput}}</p>
+  <h3>Input Transforms</h3>
+  <p>This is an input with a transform: {{transformedInput}}</p>
 </div>
