--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -4,7 +4,7 @@
 
   <p>The value I'm setting to "value" as "props" is {{value}}</p>
   <h3>Required Inputs</h3>
-  <p>This is a required input: {{requiredInput}}</p>
+  <p>This is "requiredInput": {{requiredInput}}</p>
   <h3>Input Transforms</h3>
-  <p>This is an input with a transform: {{transformedInput}}</p>
+  <p>This is "transformedInput": {{transformedInput}}</p>
 </div>
