built-in transforms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
     [value]="50"
     [requiredInput]="'This is a required input'"
     [transformedInput]="'      This is an input with a transform        '"
+    [typeCheckedInput]="100"
+    [someBooleanAttribute]="'true'"
+    [someNumberAttribute]="'42'"
   ></app-c03input-properties>
 </main>
 
