--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -1,10 +1,14 @@
 <h2>03 Input Properties (React "props")</h2>
 
 <div>
-
   <p>The value I'm setting to "value" as "props" is {{value}}</p>
   <h3>Required Inputs</h3>
   <p>This is "requiredInput": {{requiredInput}}</p>
   <h3>Input Transforms</h3>
   <p>This is "transformedInput": {{transformedInput}}</p>
+  <h3>Type checking</h3>
+  <p>This is "typeCheckedInput": {{typeCheckedInput}}</p>
+  <h3>Built-in transformations</h3>
+  <p>This is "someBooleanAttribute": {{someBooleanAttribute}}</p>
+  <p>This is "someNumberAttribute": {{someNumberAttribute}}</p>
 </div>
