inputs with getters and setters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
     [typeCheckedInput]="100"
     [someBooleanAttribute]="'true'"
     [someNumberAttribute]="'42'"
+    [inputWithAlias]="'This is an input with an alias'"
   ></app-c03input-properties>
 </main>
 
