--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -11,4 +11,8 @@
   <h3>Built-in transformations</h3>
   <p>This is "someBooleanAttribute": {{someBooleanAttribute}}</p>
   <p>This is "someNumberAttribute": {{someNumberAttribute}}</p>
+  <h3>Input aliases</h3>
+  <p>This is "inputWithoutAlias": {{inputWithoutAlias}}</p>
+  <h3>Inputs with getters and setters</h3>
+  <p></p>
 </div>
