inputs with setters and getters working

--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -14,5 +14,5 @@
   <h3>Input aliases</h3>
   <p>This is "inputWithoutAlias": {{inputWithoutAlias}}</p>
   <h3>Inputs with getters and setters</h3>
-  <p></p>
+  <p>This is an input with a setter: {{myValue}}</p>
 </div>
