--- a/src/app/c03input-properties/c03input-properties.component.html
+++ b/src/app/c03input-properties/c03input-properties.component.html
@@ -15,4 +15,8 @@
   <p>This is "inputWithoutAlias": {{inputWithoutAlias}}</p>
   <h3>Inputs with getters and setters</h3>
   <p>This is an input with a setter: {{myValue}}</p>
+  <h3>Inputs in the Component decorator</h3>
+  <p>This can be useful when a component inherits a property from a base class.</p>
+  <p>This has been sent with the Component decorator: {{withDecorator}}</p>
+
 </div>
