--- a/src/app/c04custom-events-with-outputs/c04custom-events-with-outputs.component.html
+++ b/src/app/c04custom-events-with-outputs/c04custom-events-with-outputs.component.html
@@ -1,1 +1,7 @@
-<p>c04custom-events-with-outputs works!</p>
+<h2>04 Custom events with outputs</h2>
+
+<h3>Emitting event data</h3>
+
+<h3>Customizing output names</h3>
+
+<h3>Specify outputs in the Component decorator</h3>
