--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,12 @@
     [inputWithAlias]="'This is an input with an alias'"
   ></app-c03input-properties>
   <app-c04custom-events-with-outputs
-    (myEvent)="myEventEmitter()"
+    [quantity]="8700"
+    (onIncrementQuantity)="updateQuantity(quantity)"
   ></app-c04custom-events-with-outputs>
+  <app-c05function-based-outputs
+
+  ></app-c05function-based-outputs>
 </main>
 
 <router-outlet />
