--- a/src/app/c04custom-events-with-outputs/c04custom-events-with-outputs.component.html
+++ b/src/app/c04custom-events-with-outputs/c04custom-events-with-outputs.component.html
@@ -1,4 +1,8 @@
 <h2>04 Custom events with outputs</h2>
+<p>Quantity: {{ quantity() }}</p>
+<button
+  (click)="incrementQuantity()"
+>Increment in 1</button>
 
 <h3>Emitting event data</h3>
 
