working, but not so efficient

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   ></app-c03input-properties>
   <app-c04custom-events-with-outputs
     [quantity]="8700"
-    (onIncrementQuantity)="updateQuantity(quantity)"
+    (onIncrementQuantity)="updateQuantity($event)"
   ></app-c04custom-events-with-outputs>
   <app-c05function-based-outputs
 
