--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,10 @@
     (onIncrementQuantity)="updateQuantity($event)"
   ></app-c04custom-events-with-outputs>
   <app-c05function-based-outputs
-
   ></app-c05function-based-outputs>
+  <app-c06ng-content>
+    <app-c00random-component></app-c00random-component>
+  </app-c06ng-content>
 </main>
 
 <router-outlet />
