--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
   ></app-c05function-based-outputs>
   <app-c06ng-content>
     <app-c00random-component></app-c00random-component>
+    <app-c00card>
+
+    </app-c00card>
   </app-c06ng-content>
 </main>
 
