--- a/src/app/c06ng-content/c06ng-content.component.html
+++ b/src/app/c06ng-content/c06ng-content.component.html
@@ -1,4 +1,6 @@
 <h2>06 Ng-Content</h2>
+<ng-content></ng-content>
+
 <p>This is like the Header</p>
 <ng-content select="card-title"></ng-content>
 <div class="card-divider">This is a divider</div>
